--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon backend/server.js",
-    "seed":  "node seeder.js"
+    "seed": "node seeder.js"
   },
   "keywords": [],
   "type": "module",
@@ -14,12 +14,16 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
-    "nodemon": "^3.1.10"
+    "multer": "^2.0.1",
+    "nodemon": "^3.1.10",
+    "streamifier": "^0.1.1"
   }
 }
