--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "sonner": "^2.0.4"
   },
