chnages type to module

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
